<resources>
    <string name="default_app_name">TaskHub</string>

    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="home">Home</string>
    <string name="new_task">New task</string>
    <string name="new_category">New category</string>
    <string name="categories">Categories</string>
    <string name="edit">Edit</string>
    <string name="night_mode">Night Mode</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_sound">Reminder Sound</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="color">Color</string>
    <string name="icon">Icon</string>
    <string name="clear">Clear</string>
    <string name="search">Search…</string>

    <array name="icons">
        <item>Default</item>
        <item>FontAwesome</item>
        <item>MaterialDesign</item>
    </array>

    <string name="catg_accessibility">Accessibility</string>
    <string name="catg_animals">Animals</string>
    <string name="catg_arrows">Arrows</string>
    <string name="catg_audio_video">Audio &amp; Video</string>
    <string name="catg_automotive">Automotive</string>
    <string name="catg_autumn">Autumn</string>
    <string name="catg_beverage">Beverage</string>
    <string name="catg_buildings">Buildings</string>
    <string name="catg_business">Business</string>
    <string name="catg_charity">Charity</string>
    <string name="catg_chat">Chat</string>
    <string name="catg_chess">Chess</string>
    <string name="catg_childhood">Childhood</string>
    <string name="catg_clothing">Clothing</string>
    <string name="catg_code">Code</string>
    <string name="catg_communication">Communication</string>
    <string name="catg_computers">Computers</string>
    <string name="catg_construction">Construction</string>
    <string name="catg_currency">Currency</string>
    <string name="catg_date_time">Date &amp; Time</string>
    <string name="catg_design">Design</string>
    <string name="catg_editors">Editors</string>
    <string name="catg_education">Education</string>
    <string name="catg_emoji">Emoji</string>
    <string name="catg_energy">Energy</string>
    <string name="catg_finance">Finance</string>
    <string name="catg_gender">Genders</string>
    <string name="catg_hands">Hands</string>
    <string name="catg_hotel">Hotel</string>
    <string name="catg_household">Household</string>
    <string name="catg_images">Images</string>
    <string name="catg_interfaces">Interfaces</string>
    <string name="catg_logistics">Logistics</string>
    <string name="catg_maps">Maps</string>
    <string name="catg_marketing">Marketing</string>
    <string name="catg_mathematics">Mathematics</string>
    <string name="catg_medical">Medical</string>
    <string name="catg_moving">Moving</string>
    <string name="catg_objects">Objects</string>
    <string name="catg_political">Political</string>
    <string name="catg_religion">Religion</string>
    <string name="catg_security">Security</string>
    <string name="catg_shopping">Shopping</string>
    <string name="catg_spinners">Spinners</string>
    <string name="catg_sports">Sports</string>
    <string name="catg_status">Status</string>
    <string name="catg_users_people">Users &amp; People</string>
    <string name="catg_winter">Winter</string>
    <string name="catg_characters">Characters &amp; Symbols</string>
    <string name="catg_clothes">Clothing &amp; Accessories</string>
    <string name="catg_time">Date &amp; Time</string>
    <string name="catg_tech">Devices &amp; Hardware</string>
    <string name="catg_editor">Editing &amp; Formatting</string>
    <string name="catg_files">Files &amp; Folders</string>
    <string name="catg_filmtv">Film &amp; TV</string>
    <string name="catg_food">Food &amp; Drink</string>
    <string name="catg_games">Games</string>
    <string name="catg_google">Google</string>
    <string name="catg_holidays">Holidays</string>
    <string name="catg_home">Home Automation</string>
    <string name="catg_player">Media Player Controls</string>
    <string name="catg_money">Money &amp; Payments</string>
    <string name="catg_music">Music</string>
    <string name="catg_nature">Nature &amp; Animals</string>
    <string name="catg_networking">Networking</string>
    <string name="catg_places">Places &amp; Landmarks</string>
    <string name="catg_power">Power</string>
    <string name="catg_programming">Programming</string>
    <string name="catg_science">Science &amp; Medicine</string>
    <string name="catg_sport">Sport</string>
    <string name="catg_travel">Travel &amp; Transport</string>
    <string name="catg_users">Users &amp; Accounts</string>
    <string name="catg_weather">Weather</string>
    <string name="catg_other">Other</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="task_end">Task End</string>
    <string name="task_start">Task Start</string>
    <string name="attachments">Attachments</string>
    <string name="subtasks">SubTasks</string>
    <string name="add_category">Add Category</string>
    <string name="add_task">Add Task</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_category">Delete Category</string>
    <string name="order_by">Order by</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="pick_color">Pick color</string>
    <string name="tasks">Tasks</string>
    <string name="list_option">List option</string>
    <string name="filter">Filter</string>
    <string name="by_categories">by categories</string>
    <string name="by_date">by date</string>
    <string name="sort">Sort</string>
    <string name="remove"><u>remove</u></string>
    <string name="reverse">Reverse</string>
    <string name="sign_in">Sign in</string>

    <string name="arg_alarm_obj">AlarmObject</string>
    <string name="bundle_alarm_obj">BundleAlarmObject</string>
</resources>