<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnBackground"
        android:elevation="4dp"
        tools:context=".ui.main.search.FilterBottomSheetFragment">

        <ImageButton
            android:id="@+id/filter_back_ib"
            android:layout_width="@dimen/touch_target"
            android:layout_height="@dimen/touch_target"
            android:layout_marginStart="@dimen/padding_8"
            android:layout_marginTop="16dp"
            android:background="@drawable/all_corner_bg"
            android:src="@drawable/ic_baseline_clear_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/side_space"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/filter_back_ib">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="72dp"
                android:clipToPadding="true"
                android:orientation="vertical"
                android:paddingBottom="72dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_option"
                    android:textColor="@color/grey_700"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/categories_check_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/side_space"
                    android:layout_marginTop="@dimen/side_space"
                    android:checked="true"
                    android:padding="@dimen/padding_8"
                    android:text="@string/categories"
                    android:textSize="16sp" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/tasks_check_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/side_space"
                    android:checked="true"
                    android:padding="@dimen/padding_8"
                    android:text="@string/tasks"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/filter"
                    android:textColor="@color/grey_700"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/side_space"
                    android:layout_marginTop="@dimen/side_space"
                    android:layout_marginEnd="@dimen/side_space">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:padding="4dp"
                        android:text="@string/by_categories"
                        android:textColor="@color/grey_700"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/remove_category_filter_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:padding="4dp"
                        android:text="@string/remove"
                        android:textColor="@color/grey_700"
                        android:textSize="16sp"
                        android:visibility="gone" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/side_space"
                    android:layout_marginEnd="@dimen/side_space">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/categories_chip_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/side_space"
                        app:selectionRequired="false"
                        app:singleSelection="false" />

                    <ProgressBar
                        android:id="@+id/category_progressbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/side_space"
                    android:layout_marginTop="@dimen/side_space"
                    android:layout_marginEnd="@dimen/side_space">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/by_date"
                        android:textColor="@color/grey_700"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/remove_date_filter_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:padding="4dp"
                        android:text="@string/remove"
                        android:textColor="@color/grey_700"
                        android:textSize="16sp"
                        android:visibility="gone" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/side_space"
                    android:layout_marginTop="@dimen/side_space"
                    android:layout_marginEnd="@dimen/side_space"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/start_date_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/all_corner_bg"
                        android:padding="@dimen/padding_8">

                        <ImageView
                            android:id="@+id/start_date_iv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="@dimen/side_space"
                            android:src="@drawable/ic_baseline_access_time_filled_24"
                            app:tint="@color/deep_orange_400" />

                        <TextView
                            android:id="@+id/start_date_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/start_date_iv"
                            android:text="-∞"
                            android:textColor="@color/deep_orange_400"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/start_date_tv"
                            android:layout_toEndOf="@id/start_date_iv"
                            android:text="@string/task_start"
                            android:textColor="@color/grey_600"
                            android:textSize="12sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/end_date_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/all_corner_bg"
                        android:padding="@dimen/padding_8">

                        <ImageView
                            android:id="@+id/end_date_iv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="@dimen/side_space"
                            android:src="@drawable/ic_baseline_access_time_filled_24"
                            app:tint="@color/blue_a_400" />

                        <TextView
                            android:id="@+id/end_date_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/end_date_iv"
                            android:text="+∞"
                            android:textColor="@color/blue_a_400"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/end_date_tv"
                            android:layout_toEndOf="@id/end_date_iv"
                            android:text="@string/task_end"
                            android:textColor="@color/grey_600"
                            android:textSize="12sp" />
                    </RelativeLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/sort"
                    android:textColor="@color/grey_700"
                    android:textSize="24sp" />

                <RadioGroup
                    android:id="@+id/search_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/side_space"
                    android:orientation="vertical">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/title_radio_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/title" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/date_radio_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date" />
                </RadioGroup>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/reverse_check_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/side_space"
                    android:padding="@dimen/padding_8"
                    android:text="@string/reverse" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/bottom_top_linear_bg"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/apply_filter_bu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/all_corner_bg"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Apply"
            android:textColor="@color/pure_white"
            app:backgroundTint="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>