<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_category_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.category.AddCategoryFragment">

        <LinearLayout
            android:id="@+id/add_category_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/padding_8"
            android:paddingTop="16dp"
            android:paddingEnd="@dimen/padding_8"
            android:paddingBottom="32dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/add_category_back_ib"
                android:layout_width="@dimen/touch_target"
                android:layout_height="@dimen/touch_target"
                android:background="@drawable/all_corner_bg"
                android:rotation="-180"
                android:src="@drawable/ic_baseline_navigate_next_24" />

            <TextView
                android:id="@+id/add_new_category_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="-40dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/new_category"
                android:textColor="@color/pure_white"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/add_category_ib"
                android:layout_width="@dimen/touch_target"
                android:layout_height="@dimen/touch_target"
                android:background="@drawable/all_corner_bg"
                android:src="@drawable/ic_baseline_check_24" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="-24dp"
            android:background="@drawable/top_corner_bg"
            android:fillViewport="true"
            android:paddingTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_category_toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="@dimen/padding_8"
                android:paddingEnd="@dimen/padding_8">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/category_title_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/side_space"
                    android:theme="@style/CategoryEditText"
                    app:boxBackgroundColor="?attr/colorSurface"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusTopStart="16dp"
                    app:boxStrokeWidth="0dp"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/category_title_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"
                        android:inputType="textAutoComplete"
                        android:maxLength="50"
                        android:selectAllOnFocus="true"
                        android:textColor="?attr/colorControlNormal" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/side_space"
                    android:text="@string/color"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/color_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/side_space" />

                <com.mohammadhadisormeyli.taskmanagement.ui.custom.iconpicker.MultiPackageIconPickerView
                    android:id="@+id/icon_picker_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="@dimen/side_space"
                    android:layout_weight="1" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/bottom_top_linear_bg"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_category_bu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/all_corner_bg"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/add_category"
            android:textColor="@color/pure_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>